Wydzielenie page z main, zamiana słownika na zmienne, pickle przekazuje Process

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,14 @@
   <h2> General information </h2>
   Welcome to my project of analyzing Covid in Poland. I downloaded raw data from here:
   <a href = "https://www.worldometers.info/" target = "_blank" title = "original data">
-  link
+  link 
   </a>
-  and then, I use machine learning to predict a new cases for future. Currently it's simple version of project so
+  and then use machine learning to predict a new cases for future. Currently it's simple version of project so
   I can only predict one day. That site is divided into 4 main sections, the first is what you are reading right now, second
   section presents a table of last 10 records I collected. There are several columns that contain the most important information for
   example: new cases of infection, new deaths, total number of cases, total number of deaths, etc. The third section contains graphs of data with
-  prediction which I made. It focuses the most important points that should be predicted. The last
-  section will tell you what could will happen tomorrow. This page is updated automatically  at 6 p.m. every day.
+  prediction. It focuses the most important points that should be predicted. The last
+  section will tell you what could will happen tomorrow. This page is updated automatically at 6 p.m. every day.
   <p> Last update: {{ last_update }} </p>
 
   <h2>  Table with data</h2>
