--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,30 @@
   <title> Covid Analyzer </title>
   <meta name = 'description' content = "Daily raports of covid in Poland" />
   <meta name = 'keywords' content = "keyword conntert" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <style>
+  .table__row:nth-child(even) {
+    background-color: #e5e5e5;
+    text-align: center;
+  }
+
+  .table__header{
+    text-align: center;
+  }
+
+  .table__cell{
+    padding: 8px;
+    text-align: center;
+  }
+
+  .table{
+    border-spacing: 0;
+    background-color: #f5f5f5;
+    text-align: center;
+  }
+  </style>
+
+
 </head>
 
 <body>
@@ -14,7 +37,7 @@
   <h2> General information </h2>
   Welcome to my project of analyzing Covid in Poland. I downloaded raw data from here:
   <a href = "https://www.worldometers.info/" target = "_blank" title = "original data">
-  link 
+  link
   </a>
   and then use machine learning to predict a new cases for future. Currently it's simple version of project so
   I can only predict one day. That site is divided into 4 main sections, the first is what you are reading right now, second
@@ -25,6 +48,22 @@
   <p> Last update: {{ last_update }} </p>
 
   <h2>  Table with data</h2>
+  <table class="table">
+    <tr class="table__header">
+      {% for header in heading %}
+      <th class="table__cell"> {{header}} </th>
+      {% endfor %}
+    </tr>
+    {% for row in data %}
+    <tr class='table__row'>
+    {% for cell in row %}
+      <td class="table_cell"> {{cell}} </td>
+    {% endfor %}
+    </tr>
+    {% endfor %}
+
+  </table>
+  </body>
 
   <h2>  Images of cases with predictions  </h2>
 
